--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
                 </div>
             </div>
 
+            <button id="translate-button">Translate</button>
+
             <div id="result-box">
                 <p id="result-text">Translation will appear here.</p>
                 <button id="speak-button" class="hidden">🔊</button>
             </div>
         </div>
     </div>
+
+    <audio id="success-sound" src="machane-kitty.mp3" preload="auto"></audio>
+    <audio id="error-sound" src="illada-aliya.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
