Fix audio file paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         </div>
     </div>
 
-    <audio id="success-sound" src="machane-kitty.mp3" preload="auto"></audio>
-    <audio id="error-sound" src="illada-aliya.mp3" preload="auto"></audio>
+    <audio id="success-sound" src="./machane-kitty.mp3" preload="auto"></audio>
+<audio id="error-sound" src="./illada-aliya.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
